--- a/install-gitlab-ce.yaml
+++ b/install-gitlab-ce.yaml
@@ -1,10 +1,27 @@
 ---
-- name: Instalar GitLab CE
+- name: Instalação do GitLab CE
   hosts: all
-  become: true
+  become: yes
 
   tasks:
-    - name: Instalar GitLab CE
-      yum:
-        name: gitlab-ce-16.7.6-ce.0.el7.x86_64
+    - name: Atualizar o Cache de Pacotes
+      apt:
+        update_cache: yes
+
+    - name: Download scripts de instalação GitLab
+      get_url:
+        url: "https://packages.gitlab.com/install/repositories/gitlab/gitlab-ce/script.deb.sh"
+        dest: "/tmp/script.deb.sh"
+
+    - name: Adicionando Repositórios do GitLab
+      command: "bash /tmp/script.deb.sh"
+      become: yes
+
+    - name: Instalação do GitLab CE
+      apt:
+        name: gitlab-ce
         state: present
+        
+    - name: Executar gitlab-ctl reconfigure
+      command: "gitlab-ctl reconfigure"
+      become: yes
