--- a/install-gitlab-ce.yaml
+++ b/install-gitlab-ce.yaml
@@ -4,6 +4,7 @@
   become: yes
 
   tasks:
+    
     - name: Atualizar o Cache de Pacotes
       apt:
         update_cache: yes
@@ -21,7 +22,14 @@
       apt:
         name: gitlab-ce
         state: present
-        
+
+    - name: Atualizar external_url no arquivo gitlab.rb
+      replace:
+        path: /etc/gitlab/gitlab.rb
+        regexp: 'external_url .*'
+        replace: "external_url 'http://{{ ansible_ssh_host }}/'"
+      become: yes
+
     - name: Executar gitlab-ctl reconfigure
       command: "gitlab-ctl reconfigure"
       become: yes
